Bug 1131768 - Unlock before tearing down the stream in case of error, to avoid recursive locking. r=kinetik, a=sledru